crates/gridwell-writer-typst/tests/snapshots/snapshots__grand-summary.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto, auto,),
  align: (left, left,),
  stroke: none,
  table.header(
    [#text(weight: "bold")[Item]],
    [#text(weight: "bold")[Amount]],
    table.hline(stroke: 0.5pt),
  ),
  [Alpha],
  [10],
  [Beta],
  [20],
  [Gamma],
  [30],
  table.hline(stroke: 0.3pt),
  table.hline(stroke: 0.3pt),
  [Total],
  [60],
)
