crates/gridwell-writer-typst/tests/snapshots/snapshots__header-only-empty-body.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#align(left)[#text(size: 16pt, weight: "bold")[Empty]]
#table(
  columns: (auto, auto, auto,),
  align: (left, left, left,),
  stroke: none,
  table.header(
    [#text(weight: "bold")[A]],
    [#text(weight: "bold")[B]],
    [#text(weight: "bold")[C]],
    table.hline(stroke: 0.5pt),
  ),
)
