crates/gridwell-writer-typst/tests/snapshots/snapshots__hidden-columns.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto, auto),
  stroke: none,
  table.header(
    [#text(weight: "bold")[Visible 1]],
    [#text(weight: "bold")[Visible 2]],
    table.hline(stroke: 0.5pt),
  ),
  [a],
  [b],
  [c],
  [d],
)
