crates/gridwell-writer-typst/tests/snapshots/snapshots__inline-image.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto, auto,),
  align: (left, left,),
  stroke: none,
  table.header(
    [#text(weight: "bold")[Icon]],
    [#text(weight: "bold")[Label]],
    table.hline(stroke: 0.5pt),
  ),
  [logo],
  [Brand],
)
