crates/gridwell-writer-typst/tests/snapshots/snapshots__line-breaks.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto, auto,),
  align: (left, left,),
  stroke: none,
  table.header(
    [#text(weight: "bold")[Name]],
    [#text(weight: "bold")[Address]],
    table.hline(stroke: 0.5pt),
  ),
  [HQ],
  [123 Main St\ Suite 100\ Anytown],
)
