crates/gridwell-writer-typst/tests/snapshots/snapshots__long-word-wrap.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (75pt, 90pt,),
  align: (left, left,),
  stroke: none,
  table.header(
    [#text(weight: "bold")[Label]],
    [#text(weight: "bold")[Token]],
    table.hline(stroke: 0.5pt),
  ),
  [URL],
  [https\:\/\/example\.com\/very\/long\/path\/that\/should\/not\/break\/nicely\?query\=1],
)
