crates/gridwell-writer-typst/tests/snapshots/snapshots__many-row-groups.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto, auto,),
  align: (left, left,),
  stroke: none,
  table.header(
    [#text(weight: "bold")[Key]],
    [#text(weight: "bold")[Value]],
    table.hline(stroke: 0.5pt),
  ),
  table.hline(stroke: 0.5pt),
  table.cell(colspan: 2, fill: luma(240))[#text(weight: "bold")[Group 1]],
  table.hline(stroke: 0.5pt),
  [k1a],
  [10],
  [k1b],
  [20],
  table.hline(stroke: 0.3pt),
  table.hline(stroke: 0.5pt),
  table.cell(colspan: 2, fill: luma(240))[#text(weight: "bold")[Group 2]],
  table.hline(stroke: 0.5pt),
  [k2a],
  [20],
  [k2b],
  [40],
  table.hline(stroke: 0.3pt),
  table.hline(stroke: 0.5pt),
  table.cell(colspan: 2, fill: luma(240))[#text(weight: "bold")[Group 3]],
  table.hline(stroke: 0.5pt),
  [k3a],
  [30],
  [k3b],
  [60],
  table.hline(stroke: 0.3pt),
  table.hline(stroke: 0.5pt),
  table.cell(colspan: 2, fill: luma(240))[#text(weight: "bold")[Group 4]],
  table.hline(stroke: 0.5pt),
  [k4a],
  [40],
  [k4b],
  [80],
  table.hline(stroke: 0.3pt),
  table.hline(stroke: 0.5pt),
  table.cell(colspan: 2, fill: luma(240))[#text(weight: "bold")[Group 5]],
  table.hline(stroke: 0.5pt),
  [k5a],
  [50],
  [k5b],
  [100],
)
